@@ -1,1 +1,1 @@
-#define VERSION	"Fourth Edition (20080705)"
+#define VERSION	"Fourth Edition (20080707)"
